vendor-esr: Import FIREFOX_31_6_0esr_RELEASE from vendor.
Source URL: http://hg.mozilla.org/releases/mozilla-esr31/archive/40a8b8411a0c.tar.bz2